# BridgeLab

./: .gitignore  CHANGELOG.md  INTERNAL.md  LICENSE  README.md  ROADMAP.md  TEST_PLAN.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  feature-tests.yml  pages.yml  public-safety.yml  release.yml
docs/: LICENSING.md  PLUGINS.md
docs/site/: README.md  index.html  style.css
examples/plugins/anonymization/: sample-eu-phi.json
examples/plugins/validation/: sample-validation.json
scripts/: README.md  gen_nsis_banners.py  test_plan_to_excel.py
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: dump_v25.rs
src-tauri/icons/: icon.icns
src-tauri/resources/hl7/: v2_5.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/anonymization/: mod.rs
src-tauri/src/commands/: anonymization.rs  communication.rs  database.rs  fileio.rs  licensing.rs  mod.rs  parser.rs  plugins.rs  schema_export.rs  tables.rs  templates.rs  test_cases.rs  validation.rs
src-tauri/src/communication/: http_client.rs  mllp.rs  mod.rs  profiles.rs
src-tauri/src/database/: mod.rs
src-tauri/src/licensing/: feature_gate.rs  mod.rs
src-tauri/src/message_store/: mod.rs
src-tauri/src/parser/: mod.rs  truncation.rs
src-tauri/src/parser/fhir/: bundle.rs  fhirpath.rs  mod.rs
src-tauri/src/parser/hl7/: ack.rs  delimiters.rs  lexer.rs  message.rs  mod.rs  tables.rs
src-tauri/src/parser/hl7/schema/: mod.rs  v2_5.rs  xsd.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/templates/: mod.rs
src-tauri/src/utils/: error.rs
src-tauri/src/validation/: mod.rs
src/lib/components/anonymization/: AnonymizeDialog.svelte
src/lib/components/bundle/: BundleVisualizer.svelte
src/lib/components/communication/: CommunicationPanel.svelte
src/lib/components/diff/: MessageDiff.svelte
src/lib/components/editor/: EditorTabs.svelte  HL7AutoComplete.ts  HL7MonarchLanguage.ts  MonacoEditor.svelte
src/lib/components/fhirpath/: FhirPathPanel.svelte
src/lib/components/layout/: AppShell.svelte  HelpWindow.svelte  MenuBar.svelte  SchemaExportDialog.svelte  SettingsModal.svelte  ShortcutsEditor.svelte  StatusBar.svelte  (+1 more)
src/lib/i18n/: de.json  en.json  es.json  fr.json  index.ts  it.json
src/lib/ipc/: anonymization.ts  bundle.ts  communication.ts  database.ts  fhirpath.ts  index.ts  licensing.ts  parser.ts  plugins.ts  schemaExport.ts  tables.ts  templates.ts  testcases.ts  updater.ts  validation.ts
src/lib/stores/: dialog.svelte.ts  messages.svelte.ts  shortcuts.svelte.ts
src/lib/types/: hl7.ts
src/routes/: +page.svelte
tests/fixtures/fhir/: bundle_many_refs.json  bundle_patient.json  dangling_bundle.json  patient_simple.json
tests/fixtures/hl7/: adt_a01_small.hl7  adt_a01_v2.5.1.hl7  invalid_structure.hl7  large_oru_with_base64.hl7  missing_msh9.hl7  orm_o01_multisegment.hl7  oru_r01_with_base64.hl7
tools/bridgelab-cli/: Cargo.toml  README.md
tools/bridgelab-cli/src/: anonymize.rs  main.rs  parser.rs  validation.rs
tools/bridgelab-keygen/: Cargo.toml  README.md
tools/bridgelab-keygen/src/: main.rs
tools/hl7-schema-importer/: Cargo.toml  README.md
tools/hl7-schema-importer/src/: main.rs
(+18 files in other folders)
