[package]
name = "bridgelab"
version = "0.1.0"
edition = "2021"
description = "BridgeLab - HL7 made simple"
authors = ["1warpengine"]

[lib]
name = "bridgelab_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
memchr = "2"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
