[package]
name = "bridgelab"
version = "0.1.0"
edition = "2021"
description = "BridgeLab - HL7 made simple"
authors = ["1warpengine"]

[lib]
name = "bridgelab_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
memchr = "2"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
regex = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
