[package]
name = "bridgelab-keygen"
version = "0.2.1"
edition = "2021"
description = "BridgeLab license key generator CLI"

[[bin]]
name = "bridgelab-keygen"
path = "src/main.rs"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
