[package]
name = "hl7-schema-importer"
version = "0.2.1"
edition = "2021"
description = "Build-time tool: ingest HL7 v2.x schema data from hl7-dictionary / HAPI and emit BridgeLab schema JSON."

[[bin]]
name = "hl7-schema-importer"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
